# test

./: .gitattributes  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/workflows/: build.yml  release.yml
led_strip/examples/led_strip_rmt_ws2812/: sdkconfig  sdkconfig.old
led_strip/examples/led_strip_rmt_ws2812/main/: led_strip_rmt_ws2812_main.c
led_strip/examples/led_strip_spi_ws2812/main/: led_strip_spi_ws2812_main.c
main/: CMakeLists.txt  https.c  https_request.c  https_request.h  https_request_example_main.c  idf_component.yml  led_control.c  led_control.h  rc522.c  rfid.c  ws2812.c  ws2812.h
main/include/: https.h  rfid.h
